fix: Visual overlap in currency input

--- a/src/features/shared/ui/CurrencyInput/CurrencyInput.scss
+++ b/src/features/shared/ui/CurrencyInput/CurrencyInput.scss
@@ -10,7 +10,7 @@
   padding: $spacer-4 0;
   position: relative;
 
-  [aria-label='Currency amount'] {
+  [aria-label='Currency amount input'] {
     border: none;
     outline: none;
     height: auto;
